force-app/main/default/objects/GTM_Assessment_Pair__mdt/GTM_Assessment_Pair__mdt.object-meta.xml
<CustomObject>
    <label>GTM Assessment Pair</label>
    <pluralLabel>GTM Assessment Pairs</pluralLabel>
</CustomObject>