force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Inactive packs are skipped by the resolver, which then falls through to the next-least-specific match.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>