force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Callouts_JSON__c.field-meta.xml
<CustomField>
    <fullName>Callouts_JSON__c</fullName>
    <label>Callouts JSON</label>
    <description>JSON array of gap patterns in the shape defined by ma-migrator capabilities/schema/capability.schema.json -- pattern, status, severity, category, issue, gloss, workaround, manual_steps -- plus verification_required. Reusing that shape verbatim is the point: a callout typed by a consultant and a callout lifted from a real platform manifest render identically, so a reader never has to ask which kind they are looking at.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>