force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Capability_Posture__c.field-meta.xml
<CustomField>
    <fullName>Capability_Posture__c</fullName>
    <label>Capability Posture</label>
    <description>The pack&#x27;s headline posture, and always the WEAKER of Source_Posture__c and Target_Posture__c (interview_only &lt; assisted &lt; instrumented). instrumented = a real adapter reads or writes it; assisted = canonical IR plus a gap catalogue with an operator-run extraction; interview_only = no adapter, the numbers are what the client told us. Drives the above-the-fold posture sentence on the readout.</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>interview_only</fullName>
                <default>true</default>
                <label>interview_only</label>
            </value>
            <value>
                <fullName>assisted</fullName>
            </value>
            <value>
                <fullName>instrumented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>