force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Emphasis_Slots__c.field-meta.xml
<CustomField>
    <fullName>Emphasis_Slots__c</fullName>
    <label>Emphasis Slots</label>
    <description>Semicolon-separated slot keys the readout should lead with for this pair. Ordering only -- it never changes a score, a weight or a band.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>