force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Posture_Statement__c.field-meta.xml
<CustomField>
    <fullName>Posture_Statement__c</fullName>
    <label>Posture Statement</label>
    <description>The above-the-fold sentence, in the client&#x27;s language, saying what is measured and what is not. Rendered before the score, not after it: a posture caveat below the number is a footnote, and footnotes are not read.</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>