force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <label>Rationale</label>
    <description>Why this pack says what it says, citing source file paths. The build script fails if a cited path does not exist -- rationale that cannot be traced is how an instrument turns into folklore.</description>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>