force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Source_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Key__c</fullName>
    <label>Source Key</label>
    <description>GTM_Migration_Platform__mdt.Platform_Key__c of the source, OR a Family_Key__c shared by several platforms, OR * for any source. Which of the three it is decides Specificity__c, and specificity is what decides who wins a merge.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>