force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Source_Posture__c.field-meta.xml
<CustomField>
    <fullName>Source_Posture__c</fullName>
    <label>Source Posture</label>
    <description>Posture of the SOURCE end alone. Separate from the headline because it is what decides whether estate figures are illustrative: those figures come from reading the source, so an instrumented source with an interview_only target (SFMC to MCN) has measured counts and an unverified destination, and flattening the two would misreport one of them.</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>interview_only</fullName>
                <default>true</default>
                <label>interview_only</label>
            </value>
            <value>
                <fullName>assisted</fullName>
            </value>
            <value>
                <fullName>instrumented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>