force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Supplement_Set__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Set__c</fullName>
    <label>Supplement Set</label>
    <description>Semicolon-separated GTM_Assessment_Supplement__mdt.Set_Key__c values that fire for this pair. Supplement questions sit OUTSIDE the 32 and produce their own named index; they can never contribute to a dimension.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>