force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Target_Key__c.field-meta.xml
<CustomField>
    <fullName>Target_Key__c</fullName>
    <label>Target Key</label>
    <description>Platform_Key__c of the target, or * for any target. A prospect who has not picked a target resolves to * and therefore to base, with a note on the readout saying so.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>