force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Target_Posture__c.field-meta.xml
<CustomField>
    <fullName>Target_Posture__c</fullName>
    <label>Target Posture</label>
    <description>Posture of the TARGET end alone. An interview_only target is why the gap catalogue on such a pack is a working model rather than a reference.</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>interview_only</fullName>
                <default>true</default>
                <label>interview_only</label>
            </value>
            <value>
                <fullName>assisted</fullName>
            </value>
            <value>
                <fullName>instrumented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>