force-app/main/default/objects/GTM_Assessment_Pair__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <description>Instrument version stamped onto GTM_Assessment_Request__c.Instrument_Version__c at submit time, so a historical record still says which edition of the pack scored it.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>